force-app/main/default/objects/Product2/fields/lgs_ctr__c.field-meta.xml
<CustomField>
    <fullName>lgs_ctr__c</fullName>
    <label>Logistics Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1000</fullName>
                <label>KX센터</label>
            </value>
            <value>
                <fullName>2041</fullName>
                <label>제주물류센터</label>
            </value>
            <value>
                <fullName>2140</fullName>
                <label>이천)푸드빌구매통합센터</label>
            </value>
            <value>
                <fullName>2230</fullName>
                <label>장성물류센터</label>
            </value>
            <value>
                <fullName>2240</fullName>
                <label>이천)푸드빌컨세션센터</label>
            </value>
            <value>
                <fullName>2250</fullName>
                <label>양산직수입센터</label>
            </value>
            <value>
                <fullName>2260</fullName>
                <label>양산물류센터</label>
            </value>
            <value>
                <fullName>2330</fullName>
                <label>장성)아라마크센터</label>
            </value>
            <value>
                <fullName>2340</fullName>
                <label>양산)푸드빌컨세션센터</label>
            </value>
            <value>
                <fullName>2360</fullName>
                <label>양산)아라마크센터</label>
            </value>
            <value>
                <fullName>2370</fullName>
                <label>수원2)아라마크센터</label>
            </value>
            <value>
                <fullName>2600</fullName>
                <label>이천물류센터</label>
            </value>
            <value>
                <fullName>2610</fullName>
                <label>이천)아라마크센터</label>
            </value>
            <value>
                <fullName>2620</fullName>
                <label>수원물류센터</label>
            </value>
            <value>
                <fullName>2622</fullName>
                <label>수원)푸드빌컨세션센터</label>
            </value>
            <value>
                <fullName>2623</fullName>
                <label>수원)아라마크센터</label>
            </value>
            <value>
                <fullName>2630</fullName>
                <label>수원2물류센터</label>
            </value>
            <value>
                <fullName>2631</fullName>
                <label>수원2)푸드빌구매통합센터</label>
            </value>
            <value>
                <fullName>2632</fullName>
                <label>수원2)푸드빌컨세션센터</label>
            </value>
            <value>
                <fullName>2640</fullName>
                <label>수원2물류센터(지하)</label>
            </value>
            <value>
                <fullName>2650</fullName>
                <label>동탄물류센터</label>
            </value>
            <value>
                <fullName>2651</fullName>
                <label>동탄푸드빌컨세션센터</label>
            </value>
            <value>
                <fullName>2652</fullName>
                <label>동탄아라마크센터</label>
            </value>
            <value>
                <fullName>2690</fullName>
                <label>수원광역물류센터</label>
            </value>
            <value>
                <fullName>2900</fullName>
                <label>인천유통가공센터</label>
            </value>
            <value>
                <fullName>5000</fullName>
                <label>센트럴키친중부점</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>