force-app/main/default/objects/Product2/fields/lgs_ctr_id__c.field-meta.xml
<CustomField>
    <fullName>lgs_ctr_id__c</fullName>
    <externalId>true</externalId>
    <label>Logistics Center ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>