force-app/main/default/objects/Product2/fields/liqkind__c.field-meta.xml
<CustomField>
    <fullName>liqkind__c</fullName>
    <label>Liquor type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>