force-app/main/default/objects/Product2/fields/liqusage__c.field-meta.xml
<CustomField>
    <fullName>liqusage__c</fullName>
    <label>the use of alcohol</label>
    <length>2</length>
    <type>Text</type>
</CustomField>