force-app/main/default/objects/Product2/fields/lvstk_cd__c.field-meta.xml
<CustomField>
    <fullName>lvstk_cd__c</fullName>
    <label>Axial Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>