force-app/main/default/objects/Product2/fields/lvstk_part_nm__c.field-meta.xml
<CustomField>
    <fullName>lvstk_part_nm__c</fullName>
    <label>Axial site name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>