force-app/main/default/objects/Product2/fields/main_act_txt__c.field-meta.xml
<CustomField>
    <fullName>main_act_txt__c</fullName>
    <label>Main Activity Content</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>