force-app/main/default/objects/Product2/fields/mcd_dtl_ql_txt__c.field-meta.xml
<CustomField>
    <fullName>mcd_dtl_ql_txt__c</fullName>
    <label>Product Details Quality Content</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>