force-app/main/default/objects/Product2/fields/mdgrp_cd__c.field-meta.xml
<CustomField>
    <fullName>mdgrp_cd__c</fullName>
    <label>Family Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>