force-app/main/default/objects/Product2/fields/mnf_ymd__c.field-meta.xml
<CustomField>
    <fullName>mnf_ymd__c</fullName>
    <label>Date of Manufacture</label>
    <length>8</length>
    <type>Text</type>
</CustomField>