force-app/main/default/objects/Product2/fields/mnfco_cd__c.field-meta.xml
<CustomField>
    <fullName>mnfco_cd__c</fullName>
    <label>Manufacturer code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>