force-app/main/default/objects/Product2/fields/mnfco_orinat_cd__c.field-meta.xml
<CustomField>
    <fullName>mnfco_orinat_cd__c</fullName>
    <label>Manufacturer country of origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MT</fullName>
                <label>말타</label>
            </value>
            <value>
                <fullName>MU</fullName>
                <label>모리셔스</label>
            </value>
            <value>
                <fullName>MV</fullName>
                <label>몰디브</label>
            </value>
            <value>
                <fullName>MW</fullName>
                <label>말라위</label>
            </value>
            <value>
                <fullName>MX</fullName>
                <label>멕시코</label>
            </value>
            <value>
                <fullName>MY</fullName>
                <label>말레이지아</label>
            </value>
            <value>
                <fullName>MZ</fullName>
                <label>모잠비크</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>나미비아</label>
            </value>
            <value>
                <fullName>NC</fullName>
                <label>뉴캘러도니아</label>
            </value>
            <value>
                <fullName>NE</fullName>
                <label>니제르</label>
            </value>
            <value>
                <fullName>NF</fullName>
                <label>노퍽군도</label>
            </value>
            <value>
                <fullName>NG</fullName>
                <label>나이지리아</label>
            </value>
            <value>
                <fullName>NI</fullName>
                <label>니카라과</label>
            </value>
            <value>
                <fullName>NL</fullName>
                <label>네덜란드</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>노르웨이</label>
            </value>
            <value>
                <fullName>NP</fullName>
                <label>네팔</label>
            </value>
            <value>
                <fullName>NR</fullName>
                <label>나우루</label>
            </value>
            <value>
                <fullName>NU</fullName>
                <label>니우제도</label>
            </value>
            <value>
                <fullName>NZ</fullName>
                <label>뉴질랜드</label>
            </value>
            <value>
                <fullName>OM</fullName>
                <label>오만</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>파나마</label>
            </value>
            <value>
                <fullName>PE</fullName>
                <label>페루</label>
            </value>
            <value>
                <fullName>PF</fullName>
                <label>폴리네시아(프)</label>
            </value>
            <value>
                <fullName>PG</fullName>
                <label>파푸아뉴기니</label>
            </value>
            <value>
                <fullName>PH</fullName>
                <label>필리핀</label>
            </value>
            <value>
                <fullName>PK</fullName>
                <label>파키스탄</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>폴란드</label>
            </value>
            <value>
                <fullName>PM</fullName>
                <label>성 피에르,미켈</label>
            </value>
            <value>
                <fullName>PN</fullName>
                <label>피트케언제도</label>
            </value>
            <value>
                <fullName>PR</fullName>
                <label>푸에르토리코</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>