force-app/main/default/objects/Product2/fields/mnfco_oriplc_cd__c.field-meta.xml
<CustomField>
    <fullName>mnfco_oriplc_cd__c</fullName>
    <label>Manufacturer&apos;s country of origin code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>