force-app/main/default/objects/Product2/fields/nfxat_avg_wt__c.field-meta.xml
<CustomField>
    <fullName>nfxat_avg_wt__c</fullName>
    <label>Non-Normal Average Weight</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>