force-app/main/default/objects/Product2/fields/nfxat_gd_yn__c.field-meta.xml
<CustomField>
    <fullName>nfxat_gd_yn__c</fullName>
    <label>Non-definite product status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>