force-app/main/default/objects/Product2/fields/nfxat_pkg_unit_cd__c.field-meta.xml
<CustomField>
    <fullName>nfxat_pkg_unit_cd__c</fullName>
    <label>Nonstop Packing Unit Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>