force-app/main/default/objects/Product2/fields/odd_spcf_yn__c.field-meta.xml
<CustomField>
    <fullName>odd_spcf_yn__c</fullName>
    <label>Specific specification status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>