force-app/main/default/objects/Product2/fields/ordr_div_cd__c.field-meta.xml
<CustomField>
    <fullName>ordr_div_cd__c</fullName>
    <description>도메인 Product 
속성 BEHVO</description>
    <label>Order classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>[10]제당제품</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>[20]모닝웰</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>[30]KX 저장품</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>[40]부산공장제조품</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>[50]전처리장제품</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>[60]축육(KX)</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>[70]수발주+저장품</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>