force-app/main/default/objects/Product2/fields/ordr_unit_cd__c.field-meta.xml
<CustomField>
    <fullName>ordr_unit_cd__c</fullName>
    <label>Order unit code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOX</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
                <label>팩(포장)</label>
            </value>
            <value>
                <fullName>PAL</fullName>
                <label>팔렛</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>