force-app/main/default/objects/Product2/fields/pac_ctcnt_qty__c.field-meta.xml
<CustomField>
    <fullName>pac_ctcnt_qty__c</fullName>
    <label>PAC Inlet</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>