force-app/main/default/objects/Product2/fields/pb_gd_cl_cd__c.field-meta.xml
<CustomField>
    <fullName>pb_gd_cl_cd__c</fullName>
    <label>PB Product Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>PB</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>CJPB</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>CJ</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>NB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>