force-app/main/default/objects/Product2/fields/pbcg_yn__c.field-meta.xml
<CustomField>
    <fullName>pbcg_yn__c</fullName>
    <label>Promotional material status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>홍보물</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>할증</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>샘플</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>