force-app/main/default/objects/Product2/fields/pice_sale_psb_yn__c.field-meta.xml
<CustomField>
    <fullName>pice_sale_psb_yn__c</fullName>
    <label>Can be sold individually</label>
    <length>1</length>
    <type>Text</type>
</CustomField>