force-app/main/default/objects/Product2/fields/pkgm_frm_cd__c.field-meta.xml
<CustomField>
    <fullName>pkgm_frm_cd__c</fullName>
    <label>Packing material type code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>