force-app/main/default/objects/Product2/fields/plt_ctcnt_qty__c.field-meta.xml
<CustomField>
    <fullName>plt_ctcnt_qty__c</fullName>
    <label>PLT Inlet</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>