force-app/main/default/objects/Product2/fields/plt_ld_cntqty__c.field-meta.xml
<CustomField>
    <fullName>plt_ld_cntqty__c</fullName>
    <label>PLT Load Quantity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>