force-app/main/default/objects/Product2/fields/plt_ld_egnb_nm__c.field-meta.xml
<CustomField>
    <fullName>plt_ld_egnb_nm__c</fullName>
    <label>PLT Loaded Singular Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>