force-app/main/default/objects/Product2/fields/plt_ld_unit_cd__c.field-meta.xml
<CustomField>
    <fullName>plt_ld_unit_cd__c</fullName>
    <label>PLT Load Unit Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>