force-app/main/default/objects/Product2/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductCategory</label>
    <referenceTo>ProductCategory__c</referenceTo>
    <relationshipLabel>상품</relationshipLabel>
    <relationshipName>ProductCategory_Product</relationshipName>
    <type>Lookup</type>
</CustomField>