force-app/main/default/objects/Product2/fields/pv_chmadiv__c.field-meta.xml
<CustomField>
    <fullName>pv_chmadiv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>chain-exclusive product</label>
    <type>Checkbox</type>
</CustomField>