force-app/main/default/objects/Product2/fields/pv_madiv__c.field-meta.xml
<CustomField>
    <fullName>pv_madiv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>exclusive goods</label>
    <type>Checkbox</type>
</CustomField>