force-app/main/default/objects/Product2/fields/ql_grd_bd__c.field-meta.xml
<CustomField>
    <fullName>ql_grd_bd__c</fullName>
    <label>Quality rating history</label>
    <length>100</length>
    <type>Text</type>
</CustomField>