force-app/main/default/objects/Product2/fields/reg_dt__c.field-meta.xml
<CustomField>
    <fullName>reg_dt__c</fullName>
    <label>Date and time of registration</label>
    <type>DateTime</type>
</CustomField>