force-app/main/default/objects/Product2/fields/regr_id__c.field-meta.xml
<CustomField>
    <fullName>regr_id__c</fullName>
    <label>Registrar ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>