force-app/main/default/objects/Product2/fields/sale_rout_cd__c.field-meta.xml
<CustomField>
    <fullName>sale_rout_cd__c</fullName>
    <label>Sales path code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>