force-app/main/default/objects/Product2/fields/SearchCNTschoolSolution__c.field-meta.xml
<CustomField>
    <fullName>SearchCNTschoolSolution__c</fullName>
    <description>급식솔루션사업부 사용자가 견적 상품목록 관리에서  검색하는 카운트</description>
    <label>SearchCNTschoolSolution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>