force-app/main/default/objects/Product2/fields/stk_mng_yn__c.field-meta.xml
<CustomField>
    <fullName>stk_mng_yn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory management status</label>
    <type>Checkbox</type>
</CustomField>