force-app/main/default/objects/Product2/fields/strg_cond__c.field-meta.xml
<CustomField>
    <fullName>strg_cond__c</fullName>
    <description>도메인 Product 
속성 RAUBE</description>
    <label>Storage Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>실온</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>냉장</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>냉동</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>