force-app/main/default/objects/Product2/fields/strg_cond_cd__c.field-meta.xml
<CustomField>
    <fullName>strg_cond_cd__c</fullName>
    <label>Storage Condition Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>상온(온도범위)</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>냉장</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>냉동</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>초냉동</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>초냉장</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>