force-app/main/default/objects/Product2/fields/strgd_yn__c.field-meta.xml
<CustomField>
    <fullName>strgd_yn__c</fullName>
    <label>Storage status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>