force-app/main/default/objects/Product2/fields/taxt_cl_cd__c.field-meta.xml
<CustomField>
    <fullName>taxt_cl_cd__c</fullName>
    <description>도메인 Product 
속성 TAXKM</description>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>면세-계산서교부</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>과세-세금계산서교부</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>영세율</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>면세-계산서미교부</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>과세-세금계산서미교부</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>