force-app/main/default/objects/Product2/fields/upd_dt__c.field-meta.xml
<CustomField>
    <fullName>upd_dt__c</fullName>
    <label>Modification date and time</label>
    <type>DateTime</type>
</CustomField>