force-app/main/default/objects/Product2/fields/updr_id__c.field-meta.xml
<CustomField>
    <fullName>updr_id__c</fullName>
    <label>Modifier ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>