force-app/main/default/objects/Product2/fields/us_yn__c.field-meta.xml
<CustomField>
    <fullName>us_yn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use or not</label>
    <type>Checkbox</type>
</CustomField>