force-app/main/default/objects/Product2/fields/wt_unit_cd__c.field-meta.xml
<CustomField>
    <fullName>wt_unit_cd__c</fullName>
    <label>Weight unit code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>